refactor: normalize loss plot per cell & change jacobian return to vector

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -21,14 +21,14 @@
     "output_size = 50\n",
     "rank = 30\n",
     "dim = input_size * output_size\n",
-    "over_sampling = 10\n",
+    "over_sampling = 2\n",
     "x_rand = False\n",
     "\n",
     "batch_size = 1\n",
     "tol = 1e-8\n",
     "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
-    "svd_every_k_iter = 5\n",
+    "svd_every_k_iter = 10\n",
     "read_noise_std = 0.1\n",
     "update_noise_std = 0.1\n",
     "# generate low rank matrix\n",
@@ -74,8 +74,8 @@
     "rpuconfig.forward.out_noise = read_noise_std\n",
     "rpuconfig.device.write_noise_std = update_noise_std\n",
     "rpuconfig.device.w_max = 1\n",
-    "rpuconfig.device.gamma_up = 0.1\n",
-    "rpuconfig.device.gamma_down = 0.1\n",
+    "rpuconfig.device.gamma_up = 0.3\n",
+    "rpuconfig.device.gamma_down = 0.5\n",
     "rpuconfig.device.w_min = -1\n",
     "rpuconfig.device.w_max_dtod = 0.01\n",
     "rpuconfig.device.w_min_dtod = 0.01\n",
@@ -138,7 +138,11 @@
     "atile3 = copy.deepcopy(atile)\n",
     "atile4 = copy.deepcopy(atile)\n",
     "# atile3.load_state_dict(atile_dic, assign=True)\n",
-    "tiles = [atile, atile2, atile3, atile4]\n",
+    "tiles = [atile, atile2, atile3]\n",
+    "method_names = [\"gdp\", \"svd\", \"svd-kf\"]\n",
+    "if rpuconfig.device.__class__.__name__ == \"LinearStepDevice\":\n",
+    "    tiles.append(atile4)\n",
+    "    method_names.append(\"svd-ekf\")\n",
     "print(atile.tile.get_info())"
    ]
   },
@@ -153,13 +157,10 @@
     "from src.prog_scheme.program_methods import GDP, SVD\n",
     "\n",
     "# enroll the programming methods\n",
-    "for tile, method in zip(tiles, [GDP, SVD, SVD, SVD]):\n",
+    "for tile, method in zip(tiles, [GDP] + [SVD] * (len(tiles) - 1)):\n",
     "    tile.program_weights = method.program_weights.__get__(tile, TileWithPeriphery)\n",
     "    tile.read_weights_ = method.read_weights_.__get__(tile, TileWithPeriphery)\n",
-    "    tile.init_setup = method.init_setup.__get__(tile, TileWithPeriphery)\n",
-    "\n",
-    "# tiles.append(atile4) if device_ekf is not None else None\n",
-    "method_names = [\"gdp\", \"svd\", \"svd-kf\", \"svd-ekf\"]"
+    "    tile.init_setup = method.init_setup.__get__(tile, TileWithPeriphery)"
    ]
   },
   {
@@ -184,7 +185,10 @@
     "        fnc = None\n",
     "    elif method_names[idx] == \"svd-kf\":\n",
     "        fnc = DeviceKF(dim=dim, read_noise_std=read_noise_std, update_noise_std=update_noise_std)\n",
-    "    elif method_names[idx] == \"svd-ekf\" and tile:\n",
+    "    elif (\n",
+    "        method_names[idx] == \"svd-ekf\"\n",
+    "        and tile.rpu_config.device.__class__.__name__ == \"LinearStepDevice\"\n",
+    "    ):\n",
     "        fnc = LinearDeviceEKF(\n",
     "            dim=dim,\n",
     "            read_noise_std=read_noise_std,\n",
@@ -239,7 +243,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = [w_target.T - tile_.tile.get_weights() for tile_ in tiles]\n",
+    "from src.core.aihwkit.utils import get_persistent_weights\n",
+    "\n",
+    "W = [w_target.T - get_persistent_weights(tile_.tile) for tile_ in tiles]\n",
     "\n",
     "plot_singular_values(W)\n",
     "print(f\"{norm_type} norm of \\n\")\n",
@@ -254,14 +260,15 @@
    "outputs": [],
    "source": [
     "for err in err_lists:\n",
-    "    plt.semilogy(err)\n",
+    "    loss = torch.tensor(err) / dim\n",
+    "    plt.semilogy(loss)\n",
     "    print(err[-1])\n",
     "# set legend\n",
     "plt.legend(method_names)\n",
     "\n",
     "\n",
     "plt.xlabel(\"Iteration\")\n",
-    "plt.ylabel(f\"{norm_type} norm of weight error\")\n",
+    "plt.ylabel(f\"Avg. {norm_type} norm of weight error per cell\")\n",
     "plt.title(f\"Error vs Iteration @ {input_size}x{output_size}, rank={rank}\")\n",
     "plt.show()"
    ]
@@ -284,7 +291,6 @@
     "# conf[\"methods\"][\"fnc\"] = conf[\"methods\"][\"fnc\"].__class__.__name__\n",
     "with wandb.init(project=\"prog-scheme\", entity=\"spk\", config=conf, dir=\"../../logs\") as run:\n",
     "    # Determine the maximum length\n",
-    "\n",
     "    max_len = max([len(err_list) for err_list in err_lists])\n",
     "    # Pad the lists with 0s\n",
     "    for err_list in err_lists:\n",
@@ -424,17 +430,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch_size_ in [1, 5, 10, 20, 50, input_size]:\n",
+    "import numpy as np\n",
+    "\n",
+    "method_kwargs[\"fnc\"] = None\n",
+    "for batch_size_ in [1, 5, 10, 20, 50]:\n",
     "    with LogCapture() as logc:\n",
-    "        atile.tile.set_weights(w.T)\n",
-    "        atile.program_weights(batch_size=batch_size_)\n",
+    "        atile.tile.set_weights(w_target.T)\n",
+    "        method_kwargs[\"batch_size\"] = batch_size_\n",
+    "        atile.program_weights(atile, **method_kwargs)\n",
     "        log_list = logc.get_log_list()\n",
     "    err_list = extract_error(log_list)\n",
-    "    num_iter = len(err_list)\n",
-    "    plt.semilogy(err_list, label=f\"batch_size={batch_size_}\")\n",
+    "    num_iter = np.arange(len(err_list)) * batch_size_\n",
+    "    plt.semilogy(num_iter, err_list, label=f\"batch_size={batch_size_}\")\n",
     "plt.legend()\n",
     "plt.xlabel(\"Iteration\")\n",
-    "plt.ylabel(\"Nuclear norm of weight error\")\n",
+    "plt.ylabel(f\"{norm_type} norm of weight error\")\n",
     "plt.title(\n",
     "    f\"{input_size}x{output_size} rank={rank} matrix with {atile.rpu_config.device.__class__.__name__}\"\n",
     ")"
