refactor: Fix kf for gdp & corresponding notebook codes

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -24,7 +24,7 @@
     "over_sampling = 2\n",
     "x_rand = False\n",
     "\n",
-    "batch_size = 1\n",
+    "batch_size = 2\n",
     "tol = 1e-8\n",
     "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
@@ -131,17 +131,13 @@
     "atile = AnalogTile(output_size, input_size, rpu_config=rpuconfig)  # with periphery\n",
     "atile_dic = {}\n",
     "atile.state_dict(atile_dic)\n",
-    "# atile2 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
-    "atile2 = copy.deepcopy(atile)\n",
-    "# atile2.load_state_dict(atile_dic, assign=True)\n",
-    "# atile3 = AnalogTile(output_size, input_size, rpu_config=rpuconfig)\n",
-    "atile3 = copy.deepcopy(atile)\n",
-    "atile4 = copy.deepcopy(atile)\n",
+    "tiles = [atile]\n",
     "# atile3.load_state_dict(atile_dic, assign=True)\n",
-    "tiles = [atile, atile2, atile3]\n",
-    "method_names = [\"gdp\", \"svd\", \"svd-kf\"]\n",
+    "method_names = [\"gdp\", \"gdp-kf\", \"svd\", \"svd-kf\"]\n",
+    "for i in range(len(method_names) - 1):\n",
+    "    tiles.append(copy.deepcopy(atile))\n",
     "if rpuconfig.device.__class__.__name__ == \"LinearStepDevice\":\n",
-    "    tiles.append(atile4)\n",
+    "    tiles.append(copy.deepcopy(atile))\n",
     "    method_names.append(\"svd-ekf\")\n",
     "print(atile.tile.get_info())"
    ]
@@ -157,7 +153,7 @@
     "from src.prog_scheme.program_methods import GDP, SVD\n",
     "\n",
     "# enroll the programming methods\n",
-    "for tile, method in zip(tiles, [GDP] + [SVD] * (len(tiles) - 1)):\n",
+    "for tile, method in zip(tiles, [GDP, GDP] + [SVD] * (len(tiles) - 2)):\n",
     "    tile.program_weights = method.program_weights.__get__(tile, TileWithPeriphery)\n",
     "    tile.read_weights_ = method.read_weights_.__get__(tile, TileWithPeriphery)\n",
     "    tile.init_setup = method.init_setup.__get__(tile, TileWithPeriphery)"
@@ -183,7 +179,7 @@
     "        fnc = None\n",
     "    elif method_names[idx] == \"svd\":\n",
     "        fnc = None\n",
-    "    elif method_names[idx] == \"svd-kf\":\n",
+    "    elif method_names[idx].endswith(\"-kf\"):\n",
     "        fnc = DeviceKF(dim=dim, read_noise_std=read_noise_std, update_noise_std=update_noise_std)\n",
     "    elif (\n",
     "        method_names[idx] == \"svd-ekf\"\n",
@@ -274,6 +270,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.arange(10).reshape(2, 5).flatten().reshape(2, 5)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -320,7 +325,7 @@
     "from sklearn.decomposition import TruncatedSVD\n",
     "\n",
     "# assert (atile.initial_weights - atile2.initial_weights).max() == 0\n",
-    "optimal_change = (w.T - atile2.initial_weights).flatten()\n",
+    "optimal_change = (w.T - tiles[0].initial_weights).flatten()\n",
     "\n",
     "# 데이터 가공\n",
     "actual_updates = atile.actual_weight_updates\n",
@@ -328,7 +333,7 @@
     "flattened_data = data.reshape(data.shape[0], -1)\n",
     "cumulative_update = np.cumsum(flattened_data, axis=0)\n",
     "\n",
-    "data2 = np.array(atile3.actual_weight_updates)\n",
+    "data2 = np.array(tiles[2].actual_weight_updates)\n",
     "flattened_data2 = data2.reshape(data2.shape[0], -1)\n",
     "cumulative_update2 = np.cumsum(flattened_data2, axis=0)"
    ]
