refactor: Enhance Kalman filter classes ,update GDP methods for clarity and functionality and add input_ratio cfg

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -31,6 +31,7 @@
     "svd_every_k_iter = 10\n",
     "read_noise_std = 0.1\n",
     "update_noise_std = 0.1\n",
+    "input_ratio = 1.1\n",
     "# generate low rank matrix\n",
     "w_target = generate_target_weights(input_size, output_size, rank)\n",
     "print(w_target[:5, :5])"
@@ -95,6 +96,7 @@
     "        \"batch_size\": batch_size,\n",
     "        \"norm_type\": norm_type,\n",
     "        \"svd_every_k_iter\": svd_every_k_iter,\n",
+    "        \"input_ratio\": input_ratio,\n",
     "        \"read_noise_std\": read_noise_std,\n",
     "        \"update_noise_std\": update_noise_std,\n",
     "        \"w_init\": 0.01,\n",
@@ -171,7 +173,6 @@
     "from src.prog_scheme.utils import extract_error\n",
     "from src.utils.logging_utils import LogCapture\n",
     "\n",
-    "target_weight = w_target.T\n",
     "err_lists = []\n",
     "method_kwargs = conf[\"methods\"].copy()\n",
     "for tile, name in zip(tiles, method_names):\n",
@@ -193,8 +194,7 @@
     "        raise ValueError(f\"Unknown method name: {name}\")\n",
     "    method_kwargs.update({\"fnc\": fnc})\n",
     "    with LogCapture() as logc:\n",
-    "        # tile.tile.set_weights(target_weight)\n",
-    "        tile.target_weights = target_weight.clone()\n",
+    "        tile.reference_combined_weights = w_target.T.clone()\n",
     "        start = time.time()\n",
     "        tile.program_weights(tile, **method_kwargs)\n",
     "        print(f\"Programming time: {time.time() - start:.2f}s\")\n",
@@ -264,15 +264,6 @@
     "plt.ylabel(f\"Avg. {norm_type} norm of weight error per cell\")\n",
     "plt.title(f\"Error vs Iteration @ {input_size}x{output_size}, rank={rank}\")\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "torch.arange(10).reshape(2, 5).flatten().reshape(2, 5)"
    ]
   },
   {
