refactor: Update program methods to staticmethod for original compatibility

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -156,9 +156,7 @@
     "\n",
     "# enroll the programming methods\n",
     "for tile, method_cls in zip(tiles, [GDP, GDP] + [SVD] * (len(tiles) - 2)):\n",
-    "    tile.program_weights = method_cls.program_weights.__get__(tile, TileWithPeriphery)\n",
-    "    tile.read_weights_ = method_cls.read_weights_.__get__(tile, TileWithPeriphery)\n",
-    "    tile.init_setup = method_cls.init_setup.__get__(tile, TileWithPeriphery)"
+    "    tile.program_weights = method_cls.program_weights.__get__(tile, TileWithPeriphery)"
    ]
   },
   {
@@ -196,7 +194,7 @@
     "    with LogCapture() as logc:\n",
     "        tile.reference_combined_weights = w_target.T.clone()\n",
     "        start = time.time()\n",
-    "        tile.program_weights(tile, **method_kwargs)\n",
+    "        tile.program_weights(**method_kwargs)\n",
     "        print(f\"Programming time: {time.time() - start:.2f}s\")\n",
     "        log = logc.get_log_list()\n",
     "    err_list = extract_error(log)\n",
