refactor: Improve type annotations and logging in programming methods and utilities

--- a/src/prog_scheme/prog-scheme-sweep.ipynb
+++ b/src/prog_scheme/prog-scheme-sweep.ipynb
@@ -10,13 +10,12 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
+    "import wandb\n",
     "from aihwkit.simulator.configs.utils import (\n",
     "    InputRangeParameter,\n",
     "    PrePostProcessingParameter,\n",
     "    UpdateParameters,\n",
-    ")\n",
-    "\n",
-    "import wandb"
+    ")"
    ]
   },
   {
@@ -294,11 +293,9 @@
     "    tiles.append(atile4) if device_ekf is not None else None\n",
     "    method_names = [t.program_weights.__name__ for t in tiles]\n",
     "\n",
-    "    # Program and log errors\n",
-    "    err_lists = program_n_log(tiles, w_target.T, conf.get(\"methods\", {}))\n",
-    "\n",
     "    # Log errors to wandb\n",
-    "    for idx, err in enumerate(err_lists):\n",
+    "    for idx, tile in enumerate(tiles):\n",
+    "        err = program_n_log(tile, w_target.T, **conf)\n",
     "        # Log the last error value for each method\n",
     "        wandb.log({f\"{method_names[idx]} Error\": err[-1]})\n",
     "        plt.semilogy(err, label=method_names[idx])\n",
