--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -28,7 +28,7 @@
     "tol = 1e-8\n",
     "max_iter = 1000\n",
     "norm_type = \"fro\"\n",
-    "svd_every_k_iter = 10\n",
+    "svd_every_k_iter = 1\n",
     "read_noise_std = 0.1\n",
     "update_noise_std = 0.1\n",
     "input_ratio = 1.1\n",
@@ -74,10 +74,10 @@
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
     "rpuconfig.forward.out_noise = read_noise_std\n",
     "rpuconfig.device.write_noise_std = update_noise_std\n",
-    "rpuconfig.device.w_max = 1\n",
+    "rpuconfig.device.w_max = 1.0\n",
     "rpuconfig.device.gamma_up = 0.3\n",
     "rpuconfig.device.gamma_down = 0.5\n",
-    "rpuconfig.device.w_min = -1\n",
+    "rpuconfig.device.w_min = -1.0\n",
     "rpuconfig.device.w_max_dtod = 0.01\n",
     "rpuconfig.device.w_min_dtod = 0.01\n",
     "rpuconfig.device.dw_min_std = 0.0\n",
@@ -150,6 +150,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from aihwkit.utils.visualization import plot_device_symmetry\n",
+    "\n",
+    "plot_device_symmetry(rpuconfig.device, w_noise=read_noise_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from aihwkit.simulator.tiles.periphery import TileWithPeriphery\n",
     "\n",
     "from src.prog_scheme.program_methods import GDP, SVD\n",
@@ -168,8 +179,7 @@
     "import time\n",
     "\n",
     "from src.prog_scheme.kalman import DeviceKF, LinearDeviceEKF\n",
-    "from src.prog_scheme.utils import extract_error\n",
-    "from src.utils.logging_utils import LogCapture\n",
+    "from src.prog_scheme.utils import program_n_log\n",
     "\n",
     "err_lists = []\n",
     "method_kwargs = conf[\"methods\"].copy()\n",
@@ -191,13 +201,7 @@
     "    else:\n",
     "        raise ValueError(f\"Unknown method name: {name}\")\n",
     "    method_kwargs.update({\"fnc\": fnc})\n",
-    "    with LogCapture() as logc:\n",
-    "        tile.reference_combined_weights = w_target.T.clone()\n",
-    "        start = time.time()\n",
-    "        tile.program_weights(**method_kwargs)\n",
-    "        print(f\"Programming time: {time.time() - start:.2f}s\")\n",
-    "        log = logc.get_log_list()\n",
-    "    err_list = extract_error(log)\n",
+    "    err_list = program_n_log(tile, w_target.T, **method_kwargs)\n",
     "    err_lists.append(err_list)"
    ]
   },
@@ -262,6 +266,33 @@
     "plt.ylabel(f\"Avg. {norm_type} norm of weight error per cell\")\n",
     "plt.title(f\"Error vs Iteration @ {input_size}x{output_size}, rank={rank}\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from aihwkit.utils.visualization import (\n",
+    "    compute_pulse_response,\n",
+    "    plot_programming_error,\n",
+    "    plot_response_overview,\n",
+    ")\n",
+    "\n",
+    "# list to numpy array\n",
+    "direction = np.array([1, 1, 1, 1])\n",
+    "w_trace = compute_pulse_response(atile, direction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_programming_error(rpuconfig.device, realistic_read=True, n_bins=51)"
    ]
   },
   {
