refactor: Split kalman filter classes to filters and controllers module, update references, and Add simple controllers

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -150,9 +150,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aihwkit.utils.visualization import plot_device_symmetry\n",
+    "from aihwkit.utils.visualization import plot_programming_error\n",
     "\n",
-    "plot_device_symmetry(rpuconfig.device, w_noise=read_noise_std)"
+    "plot_programming_error(rpuconfig.device)"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "source": [
     "import time\n",
     "\n",
-    "from src.prog_scheme.kalman import DeviceKF, LinearDeviceEKF\n",
+    "from src.prog_scheme.filters import DeviceKF, LinearDeviceEKF\n",
     "from src.prog_scheme.utils import program_n_log\n",
     "\n",
     "err_lists = []\n",
