fix: improve filter handling consistency in prog method

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -31,7 +31,7 @@
     "svd_every_k_iter = 1\n",
     "read_noise_std = 0.1\n",
     "update_noise_std = 0.1\n",
-    "input_ratio = 1.1\n",
+    "input_ratio = 1.0\n",
     "# generate low rank matrix\n",
     "w_target = generate_target_weights(input_size, output_size, rank)\n",
     "print(w_target[:5, :5])"
@@ -76,7 +76,7 @@
     "rpuconfig.device.write_noise_std = update_noise_std\n",
     "rpuconfig.device.w_max = 1.0\n",
     "rpuconfig.device.gamma_up = 0.3\n",
-    "rpuconfig.device.gamma_down = 0.5\n",
+    "rpuconfig.device.gamma_down = 0.1\n",
     "rpuconfig.device.w_min = -1.0\n",
     "rpuconfig.device.w_max_dtod = 0.01\n",
     "rpuconfig.device.w_min_dtod = 0.01\n",
@@ -102,6 +102,7 @@
     "        \"w_init\": 0.01,\n",
     "        \"over_sampling\": over_sampling,\n",
     "        \"x_rand\": x_rand,\n",
+    "        \"filter\": None,\n",
     "    },\n",
     "}"
    ]
@@ -152,7 +153,7 @@
    "source": [
     "from aihwkit.utils.visualization import plot_programming_error\n",
     "\n",
-    "plot_programming_error(rpuconfig.device)"
+    "# plot_programming_error(rpuconfig.device)"
    ]
   },
   {
@@ -178,20 +179,20 @@
    "source": [
     "import time\n",
     "\n",
-    "from src.prog_scheme.filters import DeviceKF, LinearDeviceEKF\n",
+    "from src.prog_scheme.filters import DeviceKF, LinearDeviceEKF, NoFilter\n",
     "from src.prog_scheme.utils import program_n_log\n",
     "\n",
     "err_lists = []\n",
-    "method_kwargs = conf[\"methods\"].copy()\n",
+    "method_kwargs: dict = conf[\"methods\"].copy()\n",
     "for tile, name in zip(tiles, method_names):\n",
     "    if name == \"gdp\":\n",
-    "        fnc = None\n",
+    "        filter = NoFilter()\n",
     "    elif name == \"svd\":\n",
-    "        fnc = None\n",
+    "        filter = NoFilter()\n",
     "    elif name.endswith(\"-kf\"):\n",
-    "        fnc = DeviceKF(dim=dim, read_noise_std=read_noise_std, update_noise_std=update_noise_std)\n",
+    "        filter = DeviceKF(dim=dim, read_noise_std=read_noise_std, update_noise_std=update_noise_std)\n",
     "    elif name == \"svd-ekf\" and tile.rpu_config.device.__class__.__name__ == \"LinearStepDevice\":\n",
-    "        fnc = LinearDeviceEKF(\n",
+    "        filter = LinearDeviceEKF(\n",
     "            dim=dim,\n",
     "            read_noise_std=read_noise_std,\n",
     "            update_noise_std=update_noise_std,\n",
@@ -200,7 +201,7 @@
     "        )\n",
     "    else:\n",
     "        raise ValueError(f\"Unknown method name: {name}\")\n",
-    "    method_kwargs.update({\"fnc\": fnc})\n",
+    "    method_kwargs[\"filter\"] = filter\n",
     "    err_list = program_n_log(tile, w_target.T, **method_kwargs)\n",
     "    err_lists.append(err_list)"
    ]
@@ -275,11 +276,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from aihwkit.utils.visualization import (\n",
-    "    compute_pulse_response,\n",
-    "    plot_programming_error,\n",
-    "    plot_response_overview,\n",
-    ")\n",
+    "from aihwkit.utils.visualization import compute_pulse_response, plot_response_overview\n",
     "\n",
     "# list to numpy array\n",
     "direction = np.array([1, 1, 1, 1])\n",
@@ -292,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_programming_error(rpuconfig.device, realistic_read=True, n_bins=51)"
+    "# plot_programming_error(rpuconfig.device, realistic_read=True, n_bins=51)"
    ]
   },
   {
