feat: Add RobustSVD controller, refactor types and SVD method to use ctrl

--- a/src/prog_scheme/prog-scheme.ipynb
+++ b/src/prog_scheme/prog-scheme.ipynb
@@ -17,18 +17,18 @@
     "\n",
     "from src.prog_scheme.utils import generate_target_weights\n",
     "\n",
-    "input_size = 100\n",
+    "input_size = 20\n",
     "output_size = 50\n",
-    "rank = 30\n",
+    "rank = 10\n",
     "dim = input_size * output_size\n",
     "over_sampling = 2\n",
     "x_rand = False\n",
     "\n",
-    "batch_size = 2\n",
+    "batch_size = 1\n",
     "tol = 1e-8\n",
-    "max_iter = 1000\n",
+    "max_iter = 100\n",
     "norm_type = \"fro\"\n",
-    "svd_every_k_iter = 1\n",
+    "svd_every_k_iter = 2\n",
     "read_noise_std = 0.1\n",
     "update_noise_std = 0.1\n",
     "input_ratio = 1.0\n",
@@ -70,14 +70,14 @@
     "device_cfg = LinearStepDevice()\n",
     "# device_cfg = IdealDevice()\n",
     "\n",
-    "update_cfg = UpdateParameters(pulse_type=PulseType.STOCHASTIC, desired_bl=127)\n",
+    "update_cfg = UpdateParameters(pulse_type=PulseType.MEAN_COUNT, desired_bl=127)\n",
     "rpuconfig = SingleRPUConfig(update=update_cfg, device=device_cfg)\n",
     "rpuconfig.forward.out_noise = read_noise_std\n",
     "rpuconfig.device.write_noise_std = update_noise_std\n",
-    "rpuconfig.device.w_max = 1.0\n",
+    "rpuconfig.device.w_max = 1.2\n",
     "rpuconfig.device.gamma_up = 0.3\n",
     "rpuconfig.device.gamma_down = 0.1\n",
-    "rpuconfig.device.w_min = -1.0\n",
+    "rpuconfig.device.w_min = -1.2\n",
     "rpuconfig.device.w_max_dtod = 0.01\n",
     "rpuconfig.device.w_min_dtod = 0.01\n",
     "rpuconfig.device.dw_min_std = 0.0\n",
@@ -136,7 +136,7 @@
     "atile.state_dict(atile_dic)\n",
     "tiles = [atile]\n",
     "# atile3.load_state_dict(atile_dic, assign=True)\n",
-    "method_names = [\"gdp\", \"gdp-kf\", \"svd\", \"svd-kf\"]\n",
+    "method_names = [\"gdp\", \"svd\", \"svd-kf\"]\n",
     "for i in range(len(method_names) - 1):\n",
     "    tiles.append(copy.deepcopy(atile))\n",
     "if rpuconfig.device.__class__.__name__ == \"LinearStepDevice\":\n",
@@ -167,7 +167,7 @@
     "from src.prog_scheme.program_methods import GDP, SVD\n",
     "\n",
     "# enroll the programming methods\n",
-    "for tile, method_cls in zip(tiles, [GDP, GDP] + [SVD] * (len(tiles) - 2)):\n",
+    "for tile, method_cls in zip(tiles, [GDP] + [SVD] * (len(tiles) - 1)):\n",
     "    tile.program_weights = method_cls.program_weights.__get__(tile, TileWithPeriphery)"
    ]
   },
@@ -179,19 +179,24 @@
    "source": [
     "import time\n",
     "\n",
+    "from src.prog_scheme.controllers import RobustSVDController, SVDController\n",
     "from src.prog_scheme.filters import DeviceKF, LinearDeviceEKF, NoFilter\n",
     "from src.prog_scheme.utils import program_n_log\n",
     "\n",
     "err_lists = []\n",
     "method_kwargs: dict = conf[\"methods\"].copy()\n",
     "for tile, name in zip(tiles, method_names):\n",
-    "    if name == \"gdp\":\n",
-    "        filter = NoFilter()\n",
-    "    elif name == \"svd\":\n",
-    "        filter = NoFilter()\n",
-    "    elif name.endswith(\"-kf\"):\n",
+    "    controller = None\n",
+    "    filter = NoFilter()\n",
+    "    if name.startswith(\"svd\"):\n",
+    "        controller = SVDController(\n",
+    "            target_w=w_target.T,\n",
+    "            batch_size=batch_size,\n",
+    "            svd_every_k_iter=svd_every_k_iter,\n",
+    "        )\n",
+    "    if name.endswith(\"-kf\"):\n",
     "        filter = DeviceKF(dim=dim, read_noise_std=read_noise_std, update_noise_std=update_noise_std)\n",
-    "    elif name == \"svd-ekf\" and tile.rpu_config.device.__class__.__name__ == \"LinearStepDevice\":\n",
+    "    if name.endswith(\"-ekf\") and tile.rpu_config.device.__class__.__name__ == \"LinearStepDevice\":\n",
     "        filter = LinearDeviceEKF(\n",
     "            dim=dim,\n",
     "            read_noise_std=read_noise_std,\n",
@@ -199,9 +204,15 @@
     "            iterative_update=False,\n",
     "            **rpuconf_dict[\"device\"],\n",
     "        )\n",
-    "    else:\n",
-    "        raise ValueError(f\"Unknown method name: {name}\")\n",
-    "    method_kwargs[\"filter\"] = filter\n",
+    "        controller = RobustSVDController(\n",
+    "            target_w=w_target.T,\n",
+    "            batch_size=batch_size,\n",
+    "            svd_every_k_iter=svd_every_k_iter,\n",
+    "            alpha=1,\n",
+    "            f=filter.f,\n",
+    "        )\n",
+    "\n",
+    "    method_kwargs.update({\"filter\": filter, \"controller\": controller})\n",
     "    err_list = program_n_log(tile, w_target.T, **method_kwargs)\n",
     "    err_lists.append(err_list)"
    ]
