fix: Update parameter type hint for param_adjuster and clean up unused lines in activation and nn modules

--- a/src/prog_scheme/prog-scheme-sweep.ipynb
+++ b/src/prog_scheme/prog-scheme-sweep.ipynb
@@ -10,12 +10,13 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import wandb\n",
     "from aihwkit.simulator.configs.utils import (\n",
     "    InputRangeParameter,\n",
     "    PrePostProcessingParameter,\n",
     "    UpdateParameters,\n",
-    ")"
+    ")\n",
+    "\n",
+    "import wandb"
    ]
   },
   {
