--- a/notebooks/1.0-lhr-torch-benchmark.ipynb
+++ b/notebooks/1.0-lhr-torch-benchmark.ipynb
@@ -37,8 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
     "import torch.utils.benchmark as benchmark\n",
+    "import torch\n",
     "\n",
     "A = torch.randn(256, 256)\n",
     "d = torch.randn(256)\n",
@@ -451,7 +451,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
